--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgobject-2.0-dev libgtk-3-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev
 
       - name: Install build dependencies
         run: |
@@ -141,7 +141,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgobject-2.0-dev libgtk-3-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
