--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,59 @@ jobs:
       matrix:
         python-version: ["3.8", "3.10", "3.12"]
 
+  # Multi-version Python testing - validates ABI3 compatibility
+  multi-python-test:
+    name: Multi-Python Test (Python ${{ matrix.python-version }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Setup Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+
+      - name: Cache Rust dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-py${{ matrix.python-version }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.1-dev
+
+      - name: Install build dependencies
+        run: |
+          python -m pip install -U pip setuptools wheel
+          python -m pip install maturin pytest pytest-cov
+
+      - name: Build extension
+        run: |
+          python -m pip install -e .
+
+      - name: Run Python tests
+        run: |
+          pytest tests/ -v --tb=short -o addopts=""
+
     steps:
       - uses: actions/checkout@v5
 
@@ -124,7 +177,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.10", "3.12"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v5
@@ -183,7 +236,7 @@ jobs:
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [quick-test, lint]
+    needs: [quick-test, lint, multi-python-test]
     if: always()
 
     steps:
@@ -195,6 +248,10 @@ jobs:
           fi
           if [[ "${{ needs.lint.result }}" != "success" ]]; then
             echo "❌ Linting failed"
+            exit 1
+          fi
+          if [[ "${{ needs.multi-python-test.result }}" != "success" ]]; then
+            echo "❌ Multi-Python tests failed"
             exit 1
           fi
           echo "✅ All required CI checks passed"
