--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,17 +83,17 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-        continue-on-error: true
 
       - name: Install uv
         uses: astral-sh/setup-uv@v2
         with:
           version: "latest"
 
-      - name: Create Python ${{ matrix.python-version }} venv with uv (if needed)
+      - name: Create Python venv with uv (for Python 3.7)
         if: matrix.python-version == '3.7'
         run: |
-          uv venv --python 3.7 .venv-py37
+          # Use the Python installed by setup-python
+          python -m venv .venv-py37
           source .venv-py37/bin/activate
           python --version
 
@@ -214,17 +214,17 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-        continue-on-error: true
 
       - name: Install uv
         uses: astral-sh/setup-uv@v2
         with:
           version: "latest"
 
-      - name: Create Python ${{ matrix.python-version }} venv with uv (if needed)
+      - name: Create Python venv (for Python 3.7)
         if: matrix.python-version == '3.7' && runner.os == 'Linux'
         run: |
-          uv venv --python 3.7 .venv-py37
+          # Use the Python installed by setup-python
+          python -m venv .venv-py37
           source .venv-py37/bin/activate
           python --version
 
