--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,13 +89,12 @@ jobs:
         with:
           version: "latest"
 
-      - name: Create Python venv with uv (for Python 3.7)
+      - name: Create Python venv (for Python 3.7)
         if: matrix.python-version == '3.7'
         run: |
           # Use the Python installed by setup-python
           python -m venv .venv-py37
-          source .venv-py37/bin/activate
-          python --version
+          .venv-py37/bin/python --version
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -123,24 +122,28 @@ jobs:
       - name: Install build dependencies
         run: |
           if [ "${{ matrix.python-version }}" = "3.7" ]; then
-            source .venv-py37/bin/activate
+            .venv-py37/bin/python -m pip install -U pip setuptools wheel
+            .venv-py37/bin/python -m pip install maturin pytest pytest-cov
+          else
+            python -m pip install -U pip setuptools wheel
+            python -m pip install maturin pytest pytest-cov
           fi
-          python -m pip install -U pip setuptools wheel
-          python -m pip install maturin pytest pytest-cov
 
       - name: Build extension
         run: |
           if [ "${{ matrix.python-version }}" = "3.7" ]; then
-            source .venv-py37/bin/activate
+            .venv-py37/bin/python -m pip install -e .
+          else
+            python -m pip install -e .
           fi
-          python -m pip install -e .
 
       - name: Run Python tests
         run: |
           if [ "${{ matrix.python-version }}" = "3.7" ]; then
-            source .venv-py37/bin/activate
+            .venv-py37/bin/python -m pytest tests/ -v --tb=short -o addopts=""
+          else
+            pytest tests/ -v --tb=short -o addopts=""
           fi
-          pytest tests/ -v --tb=short -o addopts=""
 
   # Code quality checks
   lint:
@@ -225,8 +228,7 @@ jobs:
         run: |
           # Use the Python installed by setup-python
           python -m venv .venv-py37
-          source .venv-py37/bin/activate
-          python --version
+          .venv-py37/bin/python --version
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -254,27 +256,31 @@ jobs:
       - name: Install build dependencies
         run: |
           if [ "${{ matrix.python-version }}" = "3.7" ] && [ "${{ runner.os }}" = "Linux" ]; then
-            source .venv-py37/bin/activate
+            .venv-py37/bin/python -m pip install -U pip setuptools wheel
+            .venv-py37/bin/python -m pip install maturin pytest pytest-cov
+          else
+            python -m pip install -U pip setuptools wheel
+            python -m pip install maturin pytest pytest-cov
           fi
-          python -m pip install -U pip setuptools wheel
-          python -m pip install maturin pytest pytest-cov
         shell: bash
 
       - name: Build extension
         run: |
           if [ "${{ matrix.python-version }}" = "3.7" ] && [ "${{ runner.os }}" = "Linux" ]; then
-            source .venv-py37/bin/activate
+            .venv-py37/bin/python -m pip install -e .
+          else
+            python -m pip install -e .
           fi
-          python -m pip install -e .
         shell: bash
 
       - name: Run all tests
         run: |
-          if [ "${{ matrix.python-version }}" = "3.7" ] && [ "${{ runner.os }}" = "Linux" ]; then
-            source .venv-py37/bin/activate
-          fi
           cargo test --lib
-          pytest tests/ -v --cov=auroraview --cov-report=xml
+          if [ "${{ matrix.python-version }}" = "3.7" ] && [ "${{ runner.os }}" = "Linux" ]; then
+            .venv-py37/bin/python -m pytest tests/ -v --cov=auroraview --cov-report=xml
+          else
+            pytest tests/ -v --cov=auroraview --cov-report=xml
+          fi
         shell: bash
 
       - name: Upload coverage
