ci: disable python-bindings for cargo test --lib
Rust unit tests don't need PyO3 linking, which causes linker errors
with abi3. Use --no-default-features to skip python-bindings feature.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,7 +275,7 @@ jobs:
 
       - name: Run all tests
         run: |
-          cargo test --lib
+          cargo test --lib --no-default-features
           if [ "${{ matrix.python-version }}" = "3.7" ] && [ "${{ runner.os }}" = "Linux" ]; then
             .venv-py37/bin/python -m pytest tests/ -v --cov=auroraview --cov-report=xml
           else
