--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libglib2.0-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libglib2.0-dev libgio-2.0-dev
 
       - name: Install build dependencies
         run: |
@@ -204,7 +204,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libglib2.0-dev
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libglib2.0-dev libgio-2.0-dev
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
