--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,136 +1,46 @@
 name: CI
 
+# This workflow runs comprehensive testing on main branch and when explicitly requested.
+# For PR checks, see pr-checks.yml which runs essential validations.
+
 on:
   push:
-    branches: [main, develop]
+    branches: [main]
   pull_request:
+    types: [labeled]  # Only run on labeled PRs (e.g., 'full-ci', 'test-wheels')
   workflow_dispatch:
+  workflow_call:
 
 permissions:
   contents: read
 
 jobs:
-  # Quick validation - runs on every PR
+  # Quick validation - runs on every PR, depends on version check
   quick-test:
     name: Quick Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: false  # Allow other Python versions to continue if one fails
       matrix:
-        python-version: ["3.8", "3.10", "3.12"]
+        python-version: ["3.8", "3.10", "3.12"]  # Test min, stable, and recent stable
 
     steps:
       - uses: actions/checkout@v5
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup AuroraView Environment
+        uses: ./.github/actions/setup-auroraview
         with:
           python-version: ${{ matrix.python-version }}
+          rust-components: 'clippy'
+          cache-key-suffix: 'quick-test'
 
-      - name: Setup Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Build and Test
+        uses: ./.github/actions/build-and-test
         with:
-          components: rustfmt, clippy
+          test-type: 'basic'
+          generate-stubs: 'true'
 
-      - name: Cache Rust dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install -U pip setuptools wheel
-          python -m pip install maturin pytest pytest-cov
-
-      - name: Build extension
-        run: |
-          python -m pip install -e .
-
-      - name: Run Rust tests
-        run: |
-          cargo test --lib
-
-      - name: Run Python tests
-        run: |
-          pytest tests/ -v --tb=short -m "not slow"
-
-  # Multi-version Python testing - validates ABI3 compatibility
-  multi-python-test:
-    name: Multi-Python Test (Python ${{ matrix.python-version }})
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v2
-        with:
-          version: "latest"
-
-      - name: Setup Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-
-      - name: Cache Rust dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-py${{ matrix.python-version }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libpango1.0-dev \
-            libcairo2-dev
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install -U pip setuptools wheel
-          python -m pip install maturin pytest pytest-cov
-
-      - name: Build extension
-        run: |
-          python -m pip install -e .
-
-      - name: Run Python tests
-        run: |
-          pytest tests/ -v --tb=short -o addopts=""
-
-  # Code quality checks
+  # Code quality and linting - runs on every PR
   lint:
     name: Code Quality
     runs-on: ubuntu-latest
@@ -138,83 +48,81 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup AuroraView Environment
+        uses: ./.github/actions/setup-auroraview
         with:
           python-version: "3.10"
+          rust-components: 'rustfmt,clippy'
+          cache-key-suffix: 'lint'
 
-      - name: Setup Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+      - name: Run linting and formatting checks
+        run: just ci-lint
 
-      - name: Cache Rust dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-lint-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-lint-
-
-      - name: Install dependencies
-        run: |
-          python -m pip install -U pip
-          python -m pip install ruff mypy maturin
-
-      - name: Check Rust formatting
-        run: cargo fmt --all -- --check
-
-      - name: Run Rust clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
-
-      - name: Check Python formatting
-        run: ruff format --check python/ tests/
-
-      - name: Run Python linting
-        run: ruff check python/ tests/
-
-  # Comprehensive testing - runs on main branch
+  # Comprehensive testing - runs on main branch and when requested
   full-test:
     name: Full Test Suite (${{ matrix.os }}, Python ${{ matrix.python-version }})
     runs-on: ${{ matrix.os }}
-    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+    if: github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'full-ci') || github.event_name == 'workflow_dispatch'
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.10", "3.12"]
+        include:
+          # Test additional Python versions on Ubuntu only
+          - os: ubuntu-latest
+            python-version: "3.9"
+          - os: ubuntu-latest
+            python-version: "3.11"
 
     steps:
       - uses: actions/checkout@v5
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Setup AuroraView Environment
+        uses: ./.github/actions/setup-auroraview
         with:
           python-version: ${{ matrix.python-version }}
+          cache-key-suffix: 'full-test-${{ matrix.os }}'
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v2
+      - name: Build and Test
+        uses: ./.github/actions/build-and-test
         with:
-          version: "latest"
+          test-type: 'full'
+          upload-artifacts: 'true'
+          artifact-name: 'full-test-results-${{ matrix.os }}-py${{ matrix.python-version }}'
 
-      - name: Setup Rust toolchain
+  # Wheel testing - only for critical combinations
+  wheel-test:
+    name: Wheel Test (${{ matrix.os }}, Python ${{ matrix.python-version }})
+    runs-on: ${{ matrix.os }}
+    if: github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'test-wheels')
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.8", "3.10"]  # Test min and stable versions
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Build and Test Wheel
+        uses: ./.github/actions/build-wheel
+        with:
+          python-version: ${{ matrix.python-version }}
+          test-wheel: 'true'
+          upload-wheel: 'true'
+          artifact-name: 'test-wheels'
+
+  # Documentation tests - lightweight
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Install system dependencies (Ubuntu)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libpango1.0-dev \
-            libcairo2-dev
 
       - name: Cache Rust dependencies
         uses: actions/cache@v4
@@ -225,56 +133,34 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-full-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-docs-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            ${{ runner.os }}-cargo-full-
+            ${{ runner.os }}-cargo-docs-
             ${{ runner.os }}-cargo-
 
-      - name: Install build dependencies
-        run: |
-          python -m pip install -U pip setuptools wheel
-          python -m pip install maturin pytest pytest-cov
-        shell: bash
+      - name: Run doc tests
+        run: cargo test --doc
 
-      - name: Build extension
-        run: |
-          python -m pip install -e .
-        shell: bash
+      - name: Check documentation
+        run: cargo doc --no-deps --document-private-items
 
-      - name: Run all tests
-        run: |
-          cargo test --lib --no-default-features
-          pytest tests/ -v --cov=auroraview --cov-report=xml
-        shell: bash
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v4
-        if: matrix.os == 'ubuntu-latest'
-        with:
-          files: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-
-  # CI success check
+  # Overall CI status check - this job will be required for PR merging
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [quick-test, lint, multi-python-test]
+    needs: [quick-test, lint]
     if: always()
 
     steps:
       - name: Check all required jobs
         run: |
+          # Check if all required jobs passed
           if [[ "${{ needs.quick-test.result }}" != "success" ]]; then
             echo "❌ Quick tests failed"
             exit 1
           fi
           if [[ "${{ needs.lint.result }}" != "success" ]]; then
             echo "❌ Linting failed"
-            exit 1
-          fi
-          if [[ "${{ needs.multi-python-test.result }}" != "success" ]]; then
-            echo "❌ Multi-Python tests failed"
             exit 1
           fi
           echo "✅ All required CI checks passed"
