--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,17 @@ classifiers = [
 
 dependencies = []
 
-[project.optional-dependencies]
-dev = [
+[dependency-groups]
+test = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "coverage[toml]>=7.0",
+]
+dev = [
+    { include-group = "test" },
     "ruff>=0.8.0",
     "mypy>=1.0",
+    "maturin>=1.0",
 ]
 
 [project.urls]
