--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ Issues = "https://github.com/loonghao/auroraview/issues"
 [tool.maturin]
 python-source = "python"
 module-name = "auroraview._core"
-features = ["pyo3/extension-module"]
+features = ["pyo3/extension-module", "pyo3/abi3-py37"]
 
 # Ruff configuration
 [tool.ruff]
@@ -114,7 +114,7 @@ markers = [
 
 # Coverage configuration
 [tool.coverage.run]
-source = ["python/auroraview"]
+source = ["auroraview"]
 omit = ["*/tests/*", "*/__pycache__/*"]
 
 [tool.coverage.report]
