--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -59,13 +59,15 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
-          libwebkit2gtk-4.1-dev \
+          libwebkit2gtk-4.0-dev \
+          build-essential \
+          curl \
+          wget \
+          file \
+          libssl-dev \
           libgtk-3-dev \
-          libglib2.0-dev \
-          libglib2.0-0 \
-          libgio-2.0-dev \
-          libpango1.0-dev \
-          libcairo2-dev \
+          libayatana-appindicator3-dev \
+          librsvg2-dev \
           pkg-config
 
     - name: Cache Rust build
