fix: disable manylinux and use correct Ubuntu 24.04 webkit package
- Disabled manylinux (set to 'off') to build directly on Ubuntu host
- This allows system dependencies (GTK) to be properly installed
- Changed libwebkit2gtk-4.0-dev to libwebkit2gtk-4.1-dev for Ubuntu 24.04
- manylinux is not suitable for projects with GTK dependencies

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -59,7 +59,7 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
-          libwebkit2gtk-4.0-dev \
+          libwebkit2gtk-4.1-dev \
           build-essential \
           curl \
           wget \
@@ -90,7 +90,7 @@ runs:
         target: ${{ inputs.target }}
         args: ${{ inputs.maturin-args }}
         sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        manylinux: ${{ runner.os == 'Linux' && 'auto' || '' }}
+        manylinux: off
 
     - name: Set wheel path output
       shell: bash
