--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ classifiers = [
 
 dependencies = []
 
+[project.optional-dependencies]
+qt = [
+    "qtpy>=2.0.0",
+]
+
 [dependency-groups]
 test = [
     "pytest>=7.0",
