feat: add decorations parameter to control window title bar
ADDED:
- decorations parameter to Python API (WebView, NativeWebView)
- decorations parameter to Rust PyO3 bindings
- Test script examples/test_decorations.py demonstrating:
  * Custom HTML-based window controls
  * Borderless window (decorations=False)
  * Event-driven close button

CHANGES:
- python/auroraview/webview.py:
  * Add decorations parameter to __init__
  * Pass decorations to _core and show_async
  * Update docstrings

- python/auroraview/native.py:
  * Add decorations parameter to NativeWebView.__init__
  * Pass to parent WebView class

- src/webview/aurora_view.rs:
  * Add decorations parameter to PyO3 new() function
  * Pass to WebViewConfig

- examples/maya/02_outliner_native.py:
  * Set decorations=False for custom controls
  * Add documentation about borderless windows

- examples/test_decorations.py (NEW):
  * Standalone demo of borderless window
  * Custom HTML title bar with drag support
  * Close button using JavaScript events

KNOWN ISSUES:
- Close button in standalone mode has borrowing conflict
  (inner already borrowed during event loop)
- Need to implement proper close mechanism via event loop proxy
- Maya embedded mode close button works correctly

TECHNICAL NOTES:
- decorations=False removes native title bar and borders
- Allows custom HTML/CSS-based window controls
- Requires -webkit-app-region: drag for draggable title bar
- Close functionality needs event loop integration

Signed-off-by: Hal Long <hal.long@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,10 +47,22 @@ url = "2.5"
 parking_lot = "0.12"
 once_cell = "1.20"
 
+# IPC communication
+crossbeam-channel = "0.5"
+dashmap = "5.5"
+ipc-channel = { version = "0.18", optional = true }
+
 [dev-dependencies]
-# Testing
+# Testing frameworks
 criterion = "0.5"
 tempfile = "3.14"
+
+# Enhanced testing
+rstest = "0.23"              # Parameterized testing
+test-case = "3.3"            # Table-driven tests
+proptest = "1.5"             # Property-based testing
+mockall = "0.13"             # Mocking framework
+serial_test = "3.2"          # Serial test execution
 
 [build-dependencies]
 # Build script dependencies if needed
@@ -61,6 +73,8 @@ tempfile = "3.14"
 
 [target.x86_64-pc-windows-msvc.dependencies]
 # Python linking for Windows tests
+# Windows API for parent window support
+windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
 
 [target.x86_64-apple-darwin.dependencies]
 # Python linking for macOS tests
@@ -78,8 +92,12 @@ strip = true
 opt-level = 0
 
 [features]
-default = ["python-bindings"]
+default = ["python-bindings", "threaded-ipc"]
 python-bindings = ["pyo3"]
+
+# IPC backend features
+threaded-ipc = []
+process-ipc = ["ipc-channel"]
 
 # Platform-specific features
 windows = []
