--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -143,36 +143,36 @@ runs:
 
         # Skip testing if there's a clear architecture mismatch
         if [[ "$wheel_arch" == "x86_64" && "$system_arch" == "arm64" ]]; then
-          echo "⚠️ Skipping wheel test: x86_64 wheel on arm64 system (architecture mismatch)"
+          echo "[WARNING] Skipping wheel test: x86_64 wheel on arm64 system (architecture mismatch)"
           echo "This is expected and not an error - the wheel was built correctly for x86_64"
           exit 0
         elif [[ "$wheel_arch" == "win32" && "$system_arch" == "amd64" ]]; then
-          echo "⚠️ Skipping wheel test: win32 wheel on amd64 system (architecture mismatch)"
+          echo "[WARNING] Skipping wheel test: win32 wheel on amd64 system (architecture mismatch)"
           echo "This is expected and not an error - the wheel was built correctly for win32"
           exit 0
         fi
 
         # Try to install and test the wheel
         if pip install "$wheel_file" --force-reinstall --no-deps --disable-pip-version-check --no-warn-script-location; then
-          echo "✅ Pip install successful"
+          echo "[OK] Pip install successful"
         else
-          echo "❌ Pip install failed, this indicates a compatibility issue"
+          echo "[ERROR] Pip install failed, this indicates a compatibility issue"
           echo "Wheel file: $wheel_file"
           echo "System architecture: $system_arch"
           echo "This may be expected for cross-platform builds"
 
           # Try alternative installation methods for Windows
           if [ "${{ runner.os }}" = "Windows" ]; then
-            echo "🔄 Trying alternative installation method for Windows..."
+            echo "[INFO] Trying alternative installation method for Windows..."
             # Try with --force-reinstall and --no-build-isolation
             if pip install "$wheel_file" --force-reinstall --no-build-isolation --disable-pip-version-check; then
-              echo "✅ Alternative Windows installation successful"
+              echo "[OK] Alternative Windows installation successful"
             else
-              echo "🔄 Trying with --user flag..."
+              echo "[INFO] Trying with --user flag..."
               if pip install "$wheel_file" --user --force-reinstall --disable-pip-version-check; then
-                echo "✅ Windows user installation successful"
+                echo "[OK] Windows user installation successful"
               else
-                echo "⚠️ Windows wheel installation failed - this may be expected for cross-compilation"
+                echo "[WARNING] Windows wheel installation failed - this may be expected for cross-compilation"
                 echo "Continuing with build verification only..."
                 exit 0
               fi
@@ -184,21 +184,21 @@ runs:
 
         # Test basic functionality
         if python -c "import auroraview; print('[OK] AuroraView imported successfully')" 2>/dev/null; then
-          echo "✅ Import test passed"
+          echo "[OK] Import test passed"
         else
-          echo "❌ Import test failed - this may be due to architecture mismatch"
+          echo "[ERROR] Import test failed - this may be due to architecture mismatch"
           echo "This is not necessarily an error for cross-platform wheel builds"
           exit 0
         fi
 
         if python -c "import auroraview; print('[OK] AuroraView module loaded successfully')" 2>/dev/null; then
-          echo "✅ Module loading test passed"
+          echo "[OK] Module loading test passed"
         else
-          echo "❌ Module loading test failed"
+          echo "[ERROR] Module loading test failed"
           exit 0
         fi
 
-        echo "🎉 All wheel tests passed!"
+        echo "[OK] All wheel tests passed!"
       env:
         PYTHONUNBUFFERED: 1
 
