--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,13 @@ crossbeam-channel = "0.5"
 dashmap = "5.5"
 ipc-channel = { version = "0.18", optional = true }
 
+# CPU detection for Servo config
+num_cpus = "1.16"
+
+# Future rendering engines (feature-gated)
+# servo = { git = "https://github.com/servo/servo", optional = true }
+# winit = { version = "0.29", optional = true }
+
 [dev-dependencies]
 # Testing frameworks
 criterion = "0.5"
@@ -92,8 +99,14 @@ strip = true
 opt-level = 0
 
 [features]
-default = ["python-bindings", "threaded-ipc"]
+default = ["python-bindings", "threaded-ipc", "wry-backend"]
 python-bindings = ["pyo3"]
+
+# Rendering backend features
+# Only one backend can be active at a time
+wry-backend = []           # System WebView (WebView2/WebKit) - default
+# servo-backend = ["servo", "winit"]  # Servo rendering engine - experimental
+# custom-backend = []        # Custom user-provided renderer - advanced
 
 # IPC backend features
 threaded-ipc = []
@@ -107,4 +120,8 @@ linux = []
 # Development features
 dev-tools = []
 hot-reload = []
+
+# Performance features
+performance-monitoring = []  # Enable detailed performance tracking
+ipc-batching = []           # Enable IPC message batching
 
