fix: resolve CI build and deployment issues
- Fix PyPI upload error by enabling manylinux for Linux wheels
- Add missing system dependencies for documentation builds

Fixes:
1. PyPI rejection of linux_x86_64 wheels (now uses manylinux)
2. CI docs build failure due to missing gio-2.0/gobject-2.0

Note: Removed incorrect macOS Python linking env vars that caused
PYO3_CROSS_PYTHON_VERSION parsing errors. Maturin-action handles
macOS linking automatically.

Signed-off-by: Hal Long <hal.long@outlook.com>

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -90,7 +90,7 @@ runs:
         target: ${{ inputs.target }}
         args: ${{ inputs.maturin-args }}
         sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        manylinux: off
+        manylinux: auto
 
     - name: Set wheel path output
       shell: bash
