--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -91,6 +91,12 @@ runs:
         args: ${{ inputs.maturin-args }}
         sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
         manylinux: auto
+        # Install system dependencies in manylinux container
+        before-script-linux: |
+          # Install required system libraries for wry/webkit
+          yum install -y gtk3-devel webkit2gtk3-devel || \
+          dnf install -y gtk3-devel webkit2gtk3-devel || \
+          apt-get update && apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev
 
     - name: Set wheel path output
       shell: bash
