--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -88,15 +88,15 @@ runs:
       uses: PyO3/maturin-action@v1
       with:
         target: ${{ inputs.target }}
-        args: ${{ inputs.maturin-args }}
+        args: ${{ inputs.maturin-args }} --compatibility manylinux_2_28
         sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-        manylinux: auto
-        # Install system dependencies in manylinux container
-        before-script-linux: |
-          # Install required system libraries for wry/webkit
-          yum install -y gtk3-devel webkit2gtk3-devel || \
-          dnf install -y gtk3-devel webkit2gtk3-devel || \
-          apt-get update && apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev
+        # IMPORTANT: wry requires webkit2gtk system libraries at build time
+        # We build on the host (not in manylinux container) because:
+        # 1. manylinux containers don't have webkit2gtk-devel packages
+        # 2. System dependencies are already installed on GitHub runners
+        # 3. We use --compatibility flag to tag wheels as manylinux_2_28
+        # This means users need webkit2gtk installed at runtime
+        manylinux: off
 
     - name: Set wheel path output
       shell: bash
