fix: build only universal2 wheels on macOS ARM64 runners
Root cause: GitHub Actions macos-latest is now ARM64 (macos-15), and
macos-13 (x86_64) was shut down in September 2025. Cross-compiling
x86_64 wheels on ARM64 runners fails with Python symbol linking errors.

Solution: Build only universal2-apple-darwin wheels, which include both
x86_64 and arm64 architectures in a single wheel file.

Benefits:
- Single wheel supports both Intel and Apple Silicon Macs
- No cross-compilation issues
- Follows Python packaging best practices for macOS

Signed-off-by: Hal Long <hal.long@outlook.com>

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -60,7 +60,9 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        target: [x86_64, universal2-apple-darwin]
+        # Only build universal2 on macos-latest (ARM64 runner)
+        # universal2 includes both x86_64 and arm64 architectures
+        target: [universal2-apple-darwin]
 
     steps:
       - uses: actions/checkout@v5
@@ -70,7 +72,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           python-version: '3.11'
-          maturin-args: ${{ matrix.target == 'x86_64' && '--release --out dist --sdist --find-interpreter' || '--release --out dist --find-interpreter' }}
+          maturin-args: '--release --out dist --sdist --find-interpreter'
           test-wheel: 'true'
           artifact-name: 'wheels-macos-${{ matrix.target }}'
 
