fix: resolve release workflow error and update documentation
- Fix GitHub Release workflow by adding allowUpdates and skipIfReleaseExists flags
  to handle existing tags gracefully (resolves Error 422: tag already exists)
- Update README.md with correct QtWebView API usage examples
- Update README_zh.md with correct QtWebView API usage examples (Chinese)
- Add comprehensive API audit documentation in docs/API_AUDIT.md
- Enhance bidirectional communication examples with JavaScript code snippets

Signed-off-by: longhao <hal.long@outlook.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,4 +153,7 @@ jobs:
             ${{ steps.changelog.outputs.changelog }}
           draft: false
           prerelease: false
+          allowUpdates: true
+          skipIfReleaseExists: false
+          updateOnlyUnreleased: false
 
