ci: add Qt combo tests in PR workflow; gate WebView2 deps to Windows and fix build step\n\n- pr-checks: add qt-tests job on windows/macos with headless Qt (PySide6)\n- build-and-test action: build win feature only on Windows (win-webview2), generic build elsewhere\n- cargo: move webview2+winapi to Windows target deps; feature win-webview2 now depends on 'webview2' not 'webview2-com' to avoid non-Windows build failures\n\nSigned-off-by: longhao <hal.long@outlook.com>

--- a/.github/actions/build-and-test/action.yml
+++ b/.github/actions/build-and-test/action.yml
@@ -45,7 +45,15 @@ runs:
     - name: Build extension
       id: build
       shell: bash
-      run: just ci-build
+      run: |
+        uv pip install maturin
+        if [ "$RUNNER_OS" = "Windows" ]; then
+          echo "Building with Windows feature: win-webview2"
+          uv run maturin develop --features win-webview2
+        else
+          echo "Building without Windows-specific features"
+          uv run maturin develop
+        fi
       env:
         RUST_BACKTRACE: 1
 
