--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -74,11 +74,44 @@ jobs:
           test-wheel: 'true'
           upload-wheel: 'false'  # Don't upload in PR checks
 
+  # Qt compatibility tests on Windows and macOS (headless)
+  qt-tests:
+    name: Qt Combo Tests (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, macos-latest]
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Qt deps and package
+        shell: bash
+        run: |
+          python -m pip install -U pip
+          python -m pip install qtpy PySide6 pytest pytest-cov
+          # Install our package in editable mode to use source tree
+          python -m pip install -e .
+
+      - name: Run Qt tests (headless)
+        shell: bash
+        env:
+          QT_QPA_PLATFORM: offscreen
+          QTWEBENGINE_CHROMIUM_FLAGS: --disable-gpu --disable-software-rasterizer --single-process --no-sandbox
+          QTWEBENGINE_DISABLE_SANDBOX: '1'
+        run: |
+          pytest -q tests/test_qt_backend.py tests/test_qt_lifecycle.py -o addopts="" -rA
   # PR approval gate - all essential checks must pass
   pr-ready:
     name: PR Ready for Merge
     runs-on: ubuntu-latest
-    needs: [essential-tests, quality-checks, wheel-build-test]
+    needs: [essential-tests, quality-checks, wheel-build-test, qt-tests]
     if: always()
 
     steps:
